# som-jax

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/mechanisms/: gensomg.json
docs/: references.bib
examples/: fortran_compare.ipynb
scripts/: generate_mechanism_json.py  make_s1.10_figures.py  make_s1.11_figures.py  make_s1.13_figures.py  make_s1.16_figures.py  make_s1.18_figures.py  make_s1.1_figures.py  make_s1.4_figures.py  make_s1.6_figures.py  make_s1.7_figures.py  make_s1.8_figures.py  make_s1.9_figures.py
src/som_jax/: __init__.py  oh.py  rhs.py  simulate.py
src/som_jax/mechanism/: __init__.py  json_io.py  network.py  parser.py  types.py
tests/: conftest.py  test_package.py
tests/differentiability/: test_jacobian_shape.py  test_k_scale_identifiability.py  test_oh_recovery.py
tests/properties/: test_conservation_laws.py
tests/regression/: test_canonical_matrix.py  test_fortran_golden.py
tests/unit/: test_arrhenius_rates.py  test_mechanism_parser.py  test_oh.py  test_rhs.py  test_simulate.py  test_som_network.py
