[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "som-jax"
version = "0.1.0"
description = "Differentiable Statistical Oxidation Model (SOM) in Python/JAX — port of the Fortran reference"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ali Akherati", email = "aakherati91@gmail.com" },
]
keywords = [
    "atmospheric-chemistry",
    "som",
    "statistical-oxidation-model",
    "secondary-organic-aerosol",
    "jax",
    "diffrax",
    "differentiable-simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "diffrax>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    # Needed by scripts/make_<chunk>_figures.py — dev-time only, not used at runtime.
    "matplotlib>=3.8",
    # Needed by tests/differentiability/* — gradient-based optimisation
    # over the simulator (S1.17 recovery demo).
    "optax>=0.2",
    # Needed by tests/regression/* — provides the goldens loader and
    # tolerance-aware compare primitives. Installed from GitHub since
    # atmos-jax-common is not on PyPI yet.
    "atmos-jax-common @ git+https://github.com/aliakherati/atmos-jax-common.git@main",
]

[project.urls]
Homepage = "https://github.com/aliakherati/som-jax"
Issues = "https://github.com/aliakherati/som-jax/issues"
"Shared utilities" = "https://github.com/aliakherati/atmos-jax-common"

[tool.hatch.build.targets.wheel]
packages = ["src/som_jax"]

[tool.hatch.metadata]
# Required so we can list `atmos-jax-common @ git+...` as a dev dep.
# atmos-jax-common is not on PyPI yet; remove this once it is.
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pyflakes / pycodestyle
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "RUF",             # ruff-specific
    "SIM",             # simplify
    "PL",              # pylint (subset)
]
ignore = [
    "PLR0913",  # too many function arguments — scientific code legitimately has many
    "PLR2004",  # magic numbers — unavoidable in numerical code with physical constants
    "RUF002",   # ambiguous unicode in docstrings — × / ↔ / ³ / ⁻¹ are deliberate markup
    "RUF003",   # same, in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# Figure-generation scripts are inherently long sequences of plt calls.
# PLR0915 (too many statements) fires unhelpfully on otherwise-clear code.
"scripts/make_*_figures.py" = ["PLR0915"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "diffrax.*",
    "jax.*",
    "jaxlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "fortran: test requires gfortran/ifort toolchain and Fortran reference source",
    "slow: test takes more than a few seconds",
    "regression: compares against committed Fortran goldens",
    "differentiability: exercises jax.grad / jax.jacfwd through the simulator",
]
